fix: news mobile description text overflow

--- a/src/app/modules/news-center/pages/news-page/news-page.component.scss
+++ b/src/app/modules/news-center/pages/news-page/news-page.component.scss
@@ -47,6 +47,16 @@
       -webkit-line-clamp: 4;
     }
   }
+
+  &__description-mobile {
+    height: 66px;
+    width: 335px;
+    @include generateStyleByMaxBreakpoint("sm") {
+      display: -webkit-box !important;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 3;
+    }
+  }
 }
 
 .tabs {
